discussion/kv_engine/171932/171932_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51345: Stop ep_testsuite tests relying on dev assert behaviour

Assorted testsuite tests previously relied upon a call to:

 CheckpointMemRecoveryTask::attemptCheckpointRemoval()

being made in:

 CheckpointMemRecoveryTask::runInner()

which, under eager checkpoint removal, is only made as part of a dev
assert.

Fix the tests to correctly drive KV such that the test guards the
desired behaviour regardless of dev asserts.

A future patch should remove visible side effects of that dev assert,
or remove it entirely (it was a sanity check, which has not failed
since introduction). This patch is a test-only fix to unblock Neo CV.

Change-Id: I9bb5879339d5cd8047716d0b741cd27f38693dae

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-09 12:34:30.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-09 12:40:57.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/37/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/37/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/45/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/45/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/39/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/39/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/37/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/37/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/32/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/37/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/37/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/38/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2287:21: error: non-constant-expression cannot be narrowed from type "int" to "uint64_t" (aka "unsigned long") in initializer list [clang-diagnostic-c++11-narrowing]
    ctx.seqno = {0, batch_items};
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2287:21: note: insert an explicit cast to silence this issue
    ctx.seqno = {0, batch_items};
                    ^
                    static_cast<uint64_t>( )

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/38/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2287:21:
error: non-constant-expression cannot be narrowed from type "int" to "uint64_t" (aka "unsigned long") in initializer list [clang-diagnostic-c++11-narrowing]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/38/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/38/ : FAILURE

Compile error at [2022-03-09T12:36:22.411Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2287:21:
error: non-constant-expression cannot be narrowed from type "int" to "uint64_t" (aka "unsigned long") in initializer list [-Wc++11-narrowing]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/38/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/38/ : FAILURE

Compile error at [2022-03-09T12:35:47.808Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2287:21:
error: non-constant-expression cannot be narrowed from type "int" to "uint64_t" (aka "unsigned long") in initializer list [-Wc++11-narrowing]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/38/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/37/ : FAILURE

Compile error at [2022-03-09T12:35:24.443Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2287:21:
error: non-constant-expression cannot be narrowed from type "int" to "uint64_t" (aka "unsigned long") in initializer list [-Wc++11-narrowing]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/37/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14825/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
